@@ -1,3 +1,7 @@
+* Mon Oct 29 2018 Jeanne Greoulich <jeanne.greulich@onyxpoint.com> - 6.2.0-0
+- Update badges in README.md
+- Static asset update for puppet 5
+
 * Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.2.0-0
 - Added $package_ensure parameter
   - Changed the package from 'latest' to 'installed'
